Fix polaroid stretching with font sizes different than 16px

--- a/sass/home/_header.scss
+++ b/sass/home/_header.scss
@@ -53,7 +53,7 @@
 		}
 	}
 
-	@media only screen and (max-width: 937px) {
+	@media only screen and (max-width: 944px) {
 		margin: 2rem auto 1rem;
 	}
 }
